--- a/presentation.css
+++ b/presentation.css
@@ -32,7 +32,7 @@
       }
 
    body {background:rgba(0,0,0,0.7) 
-      url("website cars/krakenimages-376KN_ISplE-unsplash.jpg");
+      url("website cars/new.png");
       height: 100%;
       background-repeat: no-repeat;
       background-attachment: fixed;
